# mssql-python

./: .clang-format  .coveragerc  .dockerignore  .flake8  .gitignore  .pr_title_update  .pre-commit-config.yml  ATT48812.clang-format  ATT53574.flake8  ATT62655.gitignore  ATT82044.dockerignore  ATT85064.coveragerc  BUILDGUIDE.md  BUILD_DESIGN_DOC.MD  BULKCOPY_API.md  BULKCOPY_ARROW_API.md  BULKCOPY_ARROW_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CURSOR_CACHING_OPTIMIZATION.md  DEVELOPER_LINTING_GUIDE.md  Dockerfile  ENHANCED_PROFILING_PLAN.md  EmployeeFullNames.bcp  EmployeeFullNames.fmt  IMPLEMENTATION_SUMMARY.md  KNOWLEDGE_BASE.md  LATEST_UPDATE.md  LICENSE  LICENSE.txt  LOGGING.md  LOGGING_TROUBLESHOOTING_GUIDE.md  MANIFEST.in  MSSQL-Python-Logging-Design.md  OPTIMIZATION_PR_SUMMARY.md  PARSER_CHANGES_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_OPTIMIZATIONS_DETAILED.md  PERF_TIMER_LOCATIONS.md  (+56 more)
.config/: CredScanSuppressions.json  PolicheckExclusions.xml  SDL_CONFIGURATION.md  tsaoptions.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.gdn/: .gdnbaselines  .gdnsuppress
.github/: PULL_REQUEST_TEMPLATE.MD  copilot-instructions.md
OneBranchPipelines/: ACCESSING_ARTIFACTS.md  ARTIFACT_PUBLISHING_FIX.md  ESRP_SETUP_GUIDE.md  ESRP_SIGNING_CLEANUP.md  MIGRATION_SUMMARY.md  OneBranch-mssql-python-summary.md  README.md  REFACTOR_SUMMARY.md  SYMBOLS_EXPLAINED.md  SYMBOL_PUBLISHING_INTEGRATION.md  build-release-odbc-pipeline.yml  build-release-package-pipeline.yml  build-whl-pipeline.yml  dummy-release-pipeline.yml  github-ado-sync.yml  official-release-odbc-pipeline.yml  official-release-pipeline.yml  stress-test-pipeline.yml
OneBranch_Learnings/: 00_Quick_Start.md  01_Analysis_ClassicVsOneBranch.md  02_OneBranch_Architecture.md  03_Transformation_Patterns.md  README.md  onebranch-migration.md
TestsBCP/: conftest.py  test_bigint_BCP.py  test_binary_BCP.py  test_bit_BCP.py  test_column_mismatch_BCP.py  test_cursor_bulkcopy.py  test_date_BCP.py  test_datetime_BCP.py
alpineenv/: pyvenv.cfg
benchmarks/: README.md  bench_bulkcopy_arrow.py  bench_credential_cache.py  bench_mssql.py  perf-benchmarking.py  probe_async_capability.py
build_backend/: __init__.py  __main__.py  compiler.py  hooks.py  platform_utils.py
build_ddbc/: __init__.py  __main__.py  build_backend.py  compiler.py
docker-scripts/: entrypoint.sh  entrypoint_sqlalchemy.sh  mssql_setup.sh
dockybot/: README.md  __init__.py  __main__.py  cli.py  dagger_client_new.py  dagger_client_robust.py  docker_runner.py  platforms.py
docs/: DESIGN_CONNECTION_POOLING_IDENTITY.md  connection_string_allow_list_design.md  parser_state_machine.md  plan-crossRepoDevBcp.prompt.md
eng/: requirements-integration-tests.txt  requirements-mock-tds.txt
libs/: LICENSE  LICENSE.txt  LICENSING
mssql-python/: __init__.py  connection.py  constants.py  cursor.py  exceptions.py  helper.py  logging_config.py  mssql-python.pyi  type.py  utils.py
mssql_python/: BCPRustWrapper.py  CMakeCache.txt  __init__.py  aio.py  auth.py  bcp_main.py  bcp_options.py  connection.py  connection_async.py  connection_mac.py  connection_string_allowlist.py  connection_string_builder.py  connection_string_parser.py  constants.py  cursor.py  cursor_async.py  db_connection.py  ddbc_bindings.cp312-win_amd64.pyd  ddbc_bindings.py  ddbc_bindings.pyd  decimal_config.py  exceptions.py  helpers.py  logging.py  logging_config.py  mssql_python.pyi  parameter_helper.py  perf_timer.py  platform_utils.py  pool_config.py  pooling.py  row.py  run_select_query.py  testing_ddbc_bindings.py  type.py  type_code.py  utils.py
mssql_python/PyBind_Win/: BindDdbcApi.cpp  CMakeLists.txt  README  Test.py
mssql_python/pybind/: CMakeLists.txt  README.md  build.bat  build.sh  configure_dylibs.sh  ddbc_bindings.cpp  ddbc_bindings.h  ddbc_bindings_mac.cpp  keep_single_arch.bat  log  logger_bridge.cpp  logger_bridge.hpp  mac_buffers.h  mac_fix.cpp  mac_fix.h  mac_utils.cpp  mac_utils.h  performance_counter.hpp  profiling.h  py_ref.hpp  py_type_cache.hpp  python_object_cache.hpp  unix_buffers.h  unix_utils.cpp  unix_utils.h  utf_utils.h
mssql_python/pybind/bcp/: bcp_wrapper.cpp  bcp_wrapper.h
mssql_python/pybind/connection/: connection.cpp  connection.h  connection_pool.cpp  connection_pool.h
mssql_python/pybind/cursor/: cursor.cpp  cursor.h
mssql_python/pybind/libs/x86/: python313.lib
mssql_python/pybind/python_libs/arm64/: python310.lib  python312.lib  python313.lib  python39.lib
mssql_python/rust_bindings/: Cargo.toml  README.md  build.bat  build.sh  test_rust_bindings.py
mssql_python/rust_bindings/src/: bulk_copy.rs  lib.rs
mssql_python/sample_build/: CMakeLists.txt  README.md  build.bat  caller.py  check-arm64-tools.ps1  get-python-libs.ps1  sample_extension.cpp
mssql_python_odbc/: __init__.py
profiler/: README.md  __init__.py  __main__.py  core.py  reporter.py  scenarios.py
pybind/: ddbc_bindings.cpp
scripts/: build-py-core.sh
tests/: _issue671_deadlock_workload.py  _secretscan_probe.txt  conftest.py  gh600_bulkcopy_repro.py  skip_test_cursor.py  test_0000_dummy_pipeline_check.py  test_000_dependencies.py  test_001_globals.py  test_002_types.py  test_003_connection.py  test_004_cursor.py  test_004_cursor_arrow.py  test_005_connection_cursor_lifecycle.py  test_005_exceptions.py  test_006_exceptions.py  test_006_logging.py  test_007_auth.py  test_007_bcp.py  test_007_bcpOptions.py  test_007_bulkOptions.py  test_007_logging.py  test_008_auth.py  test_008_bcpMain.py  test_008_logging_integration.py  test_009_pooling.py  test_010_connection_string_parser.py  test_010_pybind_functions.py  test_011_connection_string_allowlist.py  test_011_encoding_decoding.py  test_011_performance_stress.py  test_011_singlethreaded_stress.py  test_012_connection_string_integration.py  test_013_SqlHandle_free_shutdown.py  test_013_encoding_decoding.py  test_013_sqlwchar_conversions.py  test_014_ddbc_bindings_coverage.py  test_015_pyformat_parameters.py  test_015_utf8_path_handling.py  test_016_bulk_copy_rust.py  (+37 more)
(+137 files in other folders)
