[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mssql-python"
version = "0.1.0"
description = "Microsoft SQL Server Python Driver"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Microsoft", email = "example@microsoft.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Operating System :: Microsoft :: Windows"
]

[tool.cibuildwheel]
skip = ["*musllinux*", "pp*", "cp36-*", "cp37-*"]
build-verbosity = 1
test-skip = "*"

[tool.cibuildwheel.windows]
archs = ["auto", "AMD64", "x86", "ARM64"]
before-build = ["pip install delvewheel"]
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.windows.environment]
SETUPTOOLS_USE_DISTUTILS = "local"
SETUPTOOLS_BUILD_HOOK_KWARGS = '{"py_limited_api": false}'
PYTHON_CONFIGURE_OPTS = "--enable-shared"

[tool.cibuildwheel.overrides.cp38-win_arm64]
environment = { SETUPTOOLS_USE_DISTUTILS = "local", SETUPTOOLS_BUILD_HOOK_KWARGS = '{"py_limited_api": false}', PYTHON_CONFIGURE_OPTS = "--enable-shared --enable-arm-neon", VS_TOOLS_ARGS = "/machine:ARM64" }