# =============================================================================
# Build System Configuration
# =============================================================================
[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11"]
build-backend = "build_ddbc.build_backend"
backend-path = ["."]

# =============================================================================
# Project Metadata
# =============================================================================
[project]
name = "mssql-python"
version = "1.2.0"
description = "A Python library for interacting with Microsoft SQL Server"
readme = "PyPI_Description.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Microsoft Corporation", email = "mssql-python@microsoft.com" }
]
keywords = ["mssql", "sql-server", "database", "odbc", "microsoft"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "azure-identity>=1.12.0",
]

[project.urls]
Homepage = "https://github.com/microsoft/mssql-python"
Documentation = "https://github.com/microsoft/mssql-python/wiki"
Repository = "https://github.com/microsoft/mssql-python"
Issues = "https://github.com/microsoft/mssql-python/issues"
Changelog = "https://github.com/microsoft/mssql-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "unittest-xml-reporting",
    "psutil",
    "pybind11",
    "setuptools",
    "wheel",
    "build",
]
lint = [
    "black",
    "autopep8",
    "pylint",
    "cpplint",
    "mypy",
    "types-setuptools",
]
all = [
    "mssql-python[dev,lint]",
]

# =============================================================================
# Setuptools Configuration
# =============================================================================
[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["mssql_python*"]

[tool.setuptools.package-data]
mssql_python = [
    "ddbc_bindings.cp*.pyd",
    "ddbc_bindings.cp*.so",
    "libs/*",
    "libs/**/*",
    "*.dll",
    "*.pyi",
]

[tool.setuptools.exclude-package-data]
"*" = ["*.yml", "*.yaml"]
mssql_python = [
    "libs/*/vcredist/*",
    "libs/*/vcredist/**/*",
]

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "stress: marks tests as stress tests (long-running, resource-intensive)",
]
addopts = "-m 'not stress'"

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["mssql_python"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/pybind/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# =============================================================================
# Code Formatting - Black
# =============================================================================
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
  | __pycache__
  | htmlcov
)/
'''

# =============================================================================
# Code Formatting - Autopep8
# =============================================================================
[tool.autopep8]
max_line_length = 100
ignore = "E203,W503"
in-place = true
recursive = true
aggressive = 3

# =============================================================================
# Linting - Pylint
# =============================================================================
[tool.pylint.messages_control]
disable = [
    "fixme",
    "no-member",
    "too-many-arguments",
    "too-many-positional-arguments",
    "invalid-name",
    "useless-parent-delegation"
]

[tool.pylint.format]
max-line-length = 100

# =============================================================================
# Type Checking - MyPy
# =============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "build",
    "dist",
    "tests",
]
